--- a/data/locales/ru/LC_MESSAGES/bookletapp.po
+++ b/data/locales/ru/LC_MESSAGES/bookletapp.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-08-06 23:06+0300\n"
-"PO-Revision-Date: 2021-08-06 23:09+0300\n"
+"PO-Revision-Date: 2021-08-07 12:47+0300\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -26,7 +26,7 @@ msgstr "Все страницы"
 
 #: main.kv:74
 msgid "The range"
-msgstr "Диапазон страниц"
+msgstr "Диапазон"
 
 #: main.kv:86
 msgid "The first page"
